--- a/ref1-intro.bib
+++ b/ref1-intro.bib
@@ -1,21 +1,23 @@
-@article{ReviewBlockchain2019, 
-author = {Leible, Stephan and Schlager, Steffen and Schubotz, Moritz and Gipp, Bela}, 
-title = {{A Review on Blockchain Technology and Blockchain Projects Fostering Open Science}}, 
-doi = {10.3389/fbloc.2019.00016}, 
-abstract = {{Many sectors, like finance, medicine, manufacturing, and education, use blockchain applications to profit from the unique bundle of characteristics of this technology. Blockchain technology (BT) promises benefits in trustability, collaboration, organization, identification, credibility, and transparency. In this paper, we conduct an analysis in which we show how open science can benefit from this technology and its properties. For this, we determined the requirements of an open science ecosystem and compared them with the characteristics of BT to prove that the technology suits as an infrastructure. We also review literature and promising blockchain-based projects for open science to describe the current research situation. To this end, we examine the projects in particular for their relevance and contribution to open science and categorize them afterwards according to their primary purpose. Several of them already provide functionalities that can have a positive impact on current research workflows. So, BT offers promising possibilities for its use in science, but why is it then not used on a large-scale in that area? To answer this question, we point out various shortcomings, challenges, unanswered questions, and research potentials that we found in the literature and identified during our analysis. These topics shall serve as starting points for future research to foster the BT for open science and beyond, especially in the long-term.}}, 
-pages = {16}, 
-volume = {2}, 
-journal = {Frontiers in Blockchain}, 
-local-url = {file://localhost/Users/bt_neurospin/Documents/PAPERS/BLOCKCHAIN_for_SCIENCE-literature2020/fbloc-02-00016.pdf}, 
-year = {2019}
+@article{BlockchainforScience, 
+author = {Bartling, Sönke and document, \& contributors to living}, 
+title = {{Blockchain for Science and knowledge creation.}}, 
+doi = {10.5281/zenodo.401369}, 
+url = {https://www.blockchainforscience.com/2017/02/23/blockchain-for-open-science-the-living-document/}, 
+journal = {Zenodo}, 
+year = {2016}
 }
-@article{Zeeshan2018-oro-open, 
-author = {Zeeshan, Jan and Allan, Third and Michelle, Bachler and John, Domingue}, 
-title = {{Peer-reviews on the blockchain}}, 
-abstract = {{Peer-reviewing holds a signiﬁcant importance in the process of scientiﬁc publishing. The process of peer-reviewing has been criticized for its defects, but research communities have faith in it, and hence, it is perceived as the backbone of scientiﬁc publishing. The process needs improvements in a number of ways, i.e, establishing trust in the process, preventing abuse, bringing transparency in the process and keeping the integrity of data intact. Moreover, the activity of peer-reviewing is carried out without any formal incentives. We present considerations in refreshing peer-review, and our approach to experiment in this space.}}, 
-keywords = {Peer-review,Decentralization,Blockchain,Incentives}, 
-local-url = {file://localhost/Users/bt_neurospin/Documents/PAPERS/BLOCKCHAIN_for_SCIENCE-literature2020/Peer_reviews_on_the_blockchain.pdf}, 
-year = {2018}
+@article{ReducingWaste-Lancet, 
+author = {Glasziou, Paul and Altman, Douglas G and Bossuyt, Patrick and Boutron, Isabelle and Clarke, Mike and Julious, Steven and Michie, Susan and Moher, David and Wager, Elizabeth}, 
+title = {{Reducing waste from incomplete or unusable reports of biomedical research}}, 
+issn = {0140-6736}, 
+doi = {10.1016/s0140-6736(13)62228-x}, 
+pmid = {24411647}, 
+abstract = {{Research publication can both communicate and miscommunicate. Unless research is adequately reported, the time and resources invested in the conduct of research is wasted. Reporting guidelines such as CONSORT, STARD, PRISMA, and ARRIVE aim to improve the quality of research reports, but all are much less adopted and adhered to than they should be. Adequate reports of research should clearly describe which questions were addressed and why, what was done, what was shown, and what the findings mean. However, substantial failures occur in each of these elements. For example, studies of published trial reports showed that the poor description of interventions meant that 40–89\% were non-replicable; comparisons of protocols with publications showed that most studies had at least one primary outcome changed, introduced, or omitted; and investigators of new trials rarely set their findings in the context of a systematic review, and cited a very small and biased selection of previous relevant trials. Although best documented in reports of controlled trials, inadequate reporting occurs in all types of studies—animal and other preclinical studies, diagnostic studies, epidemiological studies, clinical prediction research, surveys, and qualitative studies. In this report, and in the Series more generally, we point to a waste at all stages in medical research. Although a more nuanced understanding of the complex systems involved in the conduct, writing, and publication of research is desirable, some immediate action can be taken to improve the reporting of research. Evidence for some recommendations is clear: change the current system of research rewards and regulations to encourage better and more complete reporting, and fund the development and maintenance of infrastructure to support better reporting, linkage, and archiving of all elements of research. However, the high amount of waste also warrants future investment in the monitoring of and research into reporting of research, and active implementation of the findings to ensure that research reports better address the needs of the range of research users.}}, 
+pages = {267--276}, 
+number = {9913}, 
+volume = {383}, 
+journal = {The Lancet}, 
+year = {2014}
 }
 @article{Ethereum-Wood, 
 author = {Wood, Gavin}, 
@@ -36,6 +38,17 @@ volume = {552},
 journal = {Nature}, 
 local-url = {file://localhost/Users/bt_neurospin/Documents/Papers%20Library/Extance-Could%20Bitcoin%20technology%20help%20science--2017-Nature.pdf}, 
 year = {2017}
+}
+@article{ReviewBlockchain2019, 
+author = {Leible, Stephan and Schlager, Steffen and Schubotz, Moritz and Gipp, Bela}, 
+title = {{A Review on Blockchain Technology and Blockchain Projects Fostering Open Science}}, 
+doi = {10.3389/fbloc.2019.00016}, 
+abstract = {{Many sectors, like finance, medicine, manufacturing, and education, use blockchain applications to profit from the unique bundle of characteristics of this technology. Blockchain technology (BT) promises benefits in trustability, collaboration, organization, identification, credibility, and transparency. In this paper, we conduct an analysis in which we show how open science can benefit from this technology and its properties. For this, we determined the requirements of an open science ecosystem and compared them with the characteristics of BT to prove that the technology suits as an infrastructure. We also review literature and promising blockchain-based projects for open science to describe the current research situation. To this end, we examine the projects in particular for their relevance and contribution to open science and categorize them afterwards according to their primary purpose. Several of them already provide functionalities that can have a positive impact on current research workflows. So, BT offers promising possibilities for its use in science, but why is it then not used on a large-scale in that area? To answer this question, we point out various shortcomings, challenges, unanswered questions, and research potentials that we found in the literature and identified during our analysis. These topics shall serve as starting points for future research to foster the BT for open science and beyond, especially in the long-term.}}, 
+pages = {16}, 
+volume = {2}, 
+journal = {Frontiers in Blockchain}, 
+local-url = {file://localhost/Users/bt_neurospin/Documents/PAPERS/BLOCKCHAIN_for_SCIENCE-literature2020/fbloc-02-00016.pdf}, 
+year = {2019}
 }
 @article{vanRossum2017-DigSci, 
 author = {Rossum, Dr. Joris van}, 
@@ -60,26 +73,7 @@ local-url = {file://localhost/Users/bt_neurospin/Documents/PAPERS/BLOCKCHAIN_for
 year = {2016}, 
 rating = {5}
 }
-@misc{BlockchainforScience, 
-author = {Bartling, Sönke}, 
-title = {{Blockchain for Science}}, 
-url = {https://docs.google.com/document/d/1Uhjb4K69l0bSx7UXYUStV\_rjuPC7VGo0ERa-7xEsr58/edit\#}, 
-year = {2016}
-}
-@article{ReducingWaste-Lancet, 
-author = {Glasziou, Paul and Altman, Douglas G and Bossuyt, Patrick and Boutron, Isabelle and Clarke, Mike and Julious, Steven and Michie, Susan and Moher, David and Wager, Elizabeth}, 
-title = {{Reducing waste from incomplete or unusable reports of biomedical research}}, 
-issn = {0140-6736}, 
-doi = {10.1016/s0140-6736(13)62228-x}, 
-pmid = {24411647}, 
-abstract = {{Research publication can both communicate and miscommunicate. Unless research is adequately reported, the time and resources invested in the conduct of research is wasted. Reporting guidelines such as CONSORT, STARD, PRISMA, and ARRIVE aim to improve the quality of research reports, but all are much less adopted and adhered to than they should be. Adequate reports of research should clearly describe which questions were addressed and why, what was done, what was shown, and what the findings mean. However, substantial failures occur in each of these elements. For example, studies of published trial reports showed that the poor description of interventions meant that 40–89\% were non-replicable; comparisons of protocols with publications showed that most studies had at least one primary outcome changed, introduced, or omitted; and investigators of new trials rarely set their findings in the context of a systematic review, and cited a very small and biased selection of previous relevant trials. Although best documented in reports of controlled trials, inadequate reporting occurs in all types of studies—animal and other preclinical studies, diagnostic studies, epidemiological studies, clinical prediction research, surveys, and qualitative studies. In this report, and in the Series more generally, we point to a waste at all stages in medical research. Although a more nuanced understanding of the complex systems involved in the conduct, writing, and publication of research is desirable, some immediate action can be taken to improve the reporting of research. Evidence for some recommendations is clear: change the current system of research rewards and regulations to encourage better and more complete reporting, and fund the development and maintenance of infrastructure to support better reporting, linkage, and archiving of all elements of research. However, the high amount of waste also warrants future investment in the monitoring of and research into reporting of research, and active implementation of the findings to ensure that research reports better address the needs of the range of research users.}}, 
-pages = {267--276}, 
-number = {9913}, 
-volume = {383}, 
-journal = {The Lancet}, 
-year = {2014}
-}
-@article{Bitcoin, 
+@article{BitcoinSatoshi, 
 author = {Nakamoto, Satoshi}, 
 title = {{Bitcoin: A Peer-to-Peer Electronic Cash System}}, 
 url = {www.bitcoin.org}, 
